tests/sksl/errors/StructVariableReservedName.glsl
### Compilation failed:

error: 3: expected ';', but found 'float'
1 error
